<resources>
    <string name="app_name">超级理财师</string>
    <string name="loading">加载中&#8230;</string>
    <string name="app_exit_hit">再按一次退出程序</string>
    <string name="next_step">下一步</string>
    <string name="submit">提交</string>
    <string name="save">保存</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="remove_success">删除成功</string>
    <string name="no_network_tips">当前网络不可用，请检查网络设置</string>
    <string name="wait">请稍候...</string>
    <string name="user_protocol">用户协议</string>
    <string name="title_factory">工厂界面</string>
    <string name="h5_test">H5联调</string>
    <string name="version_name">当前版本</string>
    <string name="build_number">build_number</string>
    <string name="build_type">BUILD_TYPE</string>
    <string name="host_cloud_account">斐讯云</string>
    <string name="host_sz">深圳后台</string>
    <string name="mqtt_host">MQTT地址</string>
    <string name="mqtt_ssl_port">MQTT端口</string>
    <string name="target_sdk">targetSdkVersion</string>
    <string name="umeng_key">UMENG_APPKEY</string>
    <string name="umeng_channel">UMENG_CHANNEL</string>
    <string name="buggly_id">BUGLY_APPID</string>
    <string name="jpush_appkey">JPUSH_APPKEY</string>
    <string name="login">登录</string>
    <string name="exit_login">退出登录</string>
    <string name="hint_login_user">请输入11位手机号码</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_user_illegal">请输入正确的手机号</string>
    <string name="login_fail">帐号或密码错误，请重新输入</string>
    <string name="mobile_illegal">帐号不存在，请重新输入</string>
    <string name="hint_login_pwd">请输入6-20位登录密码</string>
    <string name="login_auth_fail">未获取到授权码</string>
    <string name="login_token_fail">登录失败</string>
    <string name="logout_success">已登出</string>
    <string name="register">注册</string>
    <string name="forget_pwd"> 忘记密码</string>
    <string name="register_now">立即注册</string>
    <string name="register_account">注册帐号</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="get_verification_re">重新获取</string>
    <string name="account">帐号</string>
    <string name="phone">手机号</string>
    <string name="captcha">图形验证码</string>
    <string name="captcha_not_request">请先获取图形验证码</string>
    <string name="captcha_illegal">请输入正确的图形验证码</string>
    <string name="captcha_failure">获取图形验证码失败</string>
    <string name="verifiaction_code">验证码</string>
    <string name="get_vercode_success">获取验证码成功</string>
    <string name="verifiaction_code_illegal">请输入正确的验证码</string>
    <string name="password">密码</string>
    <string name="password_comfirm">确认密码</string>
    <string name="password_set">设置密码</string>
    <string name="register_pwd_illegal">请输入6-20位符合规则的密码</string>
    <string name="register_pwd_diff">两次输入的密码不一致</string>
    <string name="register_no_info">请重新输入信息</string>
    <string name="register_success">密码设置成功</string>
    <string name="check_phone_already_register">该手机号已注册，你可以直接登录</string>
    <string name="check_phone_already_register2">该手机号已注册</string>
    <string name="login_welcom_phihome">欢迎来到 PhiHome</string>
    <string name="forgot_pwd_reset">重置密码</string>
    <string name="forgot_pwd_reset_new">设置新密码</string>
    <string name="forgot_pwd_reset_login">重置登录密码</string>
    <string name="forgot_pwd_reset_success">密码设置成功</string>
    <string name="check_phone_not_register">该手机号未注册</string>
    <string name="hint_click_next">点击下一步代表您同意</string>
    <string name="user_proto">《用户协议》</string>
    <string name="loading_text">加载中...</string>
    <string name="common_image_description">通用图片描述</string>
    <string name="add_device">添加设备</string>
    <string name="reset_hint_for_smart_link">接通电源，长按开关5s，直至\n指示灯橙色快闪</string>
    <string name="reset_hint_for_soft_ap">双击开关，指示灯灭2秒继续橙色快闪</string>
    <string name="add_t1_smart_inserts">添加TC1智能排插</string>
    <string name="add_smart_devices">添加智能排插</string>
    <string name="device_connect_to_router">将设备连接到路由器</string>
    <string name="will_connect_device_to_router">将设备连接到服务器</string>
    <string name="getting_wifi">正在获取WiFi，请稍候&#8230;</string>
    <string name="get_wifi_fail">获取WiFi失败，请稍后再试</string>
    <string name="get_device_wifi_fail">获取WiFi列表异常</string>
    <string name="write_ssid_info_fail">写入ssid信息失败</string>
    <string name="write_ssid_info_success">写入ssid信息成功</string>
    <string name="input_wifi_password">请输入WiFi密码</string>
    <string name="only_support_2.4_wifi">仅支持2.4G频段的无线网络</string>
    <string name="connect">连接</string>
    <string name="auto_open_wifi_fail">自动开启WiFi失败，请手动开启</string>
    <string name="get_wifi_info_fail">获取WiFi信息失败，请稍后再试</string>
    <string name="close_device_soft_ap">设备与路由器及网络连接成功，将关闭设备ssid</string>
    <string name="close_device_soft_ap_success">关闭设备成功</string>
    <string name="device">设备</string>
    <string name="mine">我</string>
    <string name="update_progress">0%</string>
    <string name="nickname">昵称</string>
    <string name="set_nickname">设置昵称</string>
    <string name="home_manage">家庭管理</string>
    <string name="my_home">我的家</string>
    <string name="message_reminding">消息提醒</string>
    <string name="reminding_setting">提醒设置</string>
    <string name="about">关于</string>
    <string name="title_activity_personal_information">PersonalInformationActivity</string>
    <string name="me">我</string>
    <string name="head_portrait">头像</string>
    <string name="not_set">未设置</string>
    <string name="modify_password">修改密码</string>
    <string name="take_a_photo">拍摄</string>
    <string name="get_a_photo_from_mobile_album">从手机相册选择</string>
    <string name="cancel">取消</string>
    <string name="crop">裁剪</string>
    <string name="person_info">个人信息</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="captchaDialog_title">请输入图片验证码</string>
    <string name="captcha_error">验证码错误请重新输入</string>
    <string name="empty">" "</string>
    <string name="change_phone_number">更换手机号</string>
    <string name="binding_phone_number">绑定手机号</string>
    <string name="have_binding_phone_number">当前绑定的手机号</string>
    <string name="security_verification">安全验证</string>
    <string name="captcha_sent">验证码已发送</string>
    <string name="short_message_verification_code">短信验证码</string>
    <string name="next_use_new_phone_number">下次请使用新手机号登录</string>
    <string name="i_know">我知道了</string>
    <string name="change_phone_warnings">更换手机号后，下次请使用新手机号登录、找回密码</string>
    <string name="new_phone_number">新手机号</string>
    <string name="old_phone_number">旧手机号</string>
    <string name="input_new_phone_number">请输入新手机号</string>
    <string name="regain">重新获取</string>
    <string name="please_enter_the_correct_verification_code">请输入正确的验证码</string>
    <string name="phone_number_change_success">手机号更换成功</string>
    <string name="phone_number_change_fail">更换手机号码失败</string>
    <string name="function_introduction">功能介绍</string>
    <string name="confirm">确定</string>
    <string name="complete">完成</string>
    <string name="nickname_hint">请输入昵称</string>
    <string name="nickname_invalid_hint">昵称不能包含特殊字符</string>
    <string name="set_new_password">设置新密码</string>
    <string name="input_old_password">请输入旧密码</string>
    <string name="input_right_old_password">请输入正确的旧密码</string>
    <string name="input_new_password">请输入6~20位新密码</string>
    <string name="password_modify_success">密码修改成功</string>
    <string name="password_modify_fail">密码修改失败</string>
    <string name="upload_head_portrait_fail">上传图片失败，请稍后再试。</string>
    <string name="get_head_portrait_fail">获取头像失败，请稍后再试</string>
    <string name="get_person_info_fail">获取个人信息失败，请稍后再试</string>
    <string name="are_you_sure_to_exit">退出后将无法控制设备，无法接收消息提醒，确定要退出吗？</string>
    <string name="zxing_title">添加设备</string>
    <string name="msg_camera_framework_bug">很遗憾，Android 相机出现问题。你可能需要重启设备。</string>
    <string name="msg_default_status">对准设备、说明书或外包装上\n的二维码，即可自动扫描</string>
    <string name="preferences_actions_title">扫描成功</string>
    <string name="preferences_auto_focus_title">自动对焦</string>
    <string name="preferences_auto_open_web_title">自动打开网页</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪贴板</string>
    <string name="preferences_custom_product_search_summary" formatted="false">替换 : ％s=内容，％f=格式，％t=类型</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_industrial_title">一维码 : 工业</string>
    <string name="preferences_decode_1D_product_title">一维码 : 商品</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (测试)</string>
    <string name="preferences_decode_QR_title">二维码</string>
    <string name="preferences_device_bug_workarounds_title">设备适配</string>
    <string name="preferences_disable_barcode_scene_mode_title">不进行条形码场景匹配</string>
    <string name="preferences_disable_continuous_focus_summary">使用标准对焦模式</string>
    <string name="preferences_disable_continuous_focus_title">不持续对焦</string>
    <string name="preferences_disable_exposure_title">不曝光</string>
    <string name="preferences_disable_metering_title">不使用距离测量</string>
    <string name="preferences_front_light_auto">自动</string>
    <string name="preferences_front_light_off">关</string>
    <string name="preferences_front_light_on">开</string>
    <string name="preferences_front_light_summary">设置闪光灯模式</string>
    <string name="preferences_front_light_title">闪光灯</string>
    <string name="preferences_general_title">扫描设置</string>
    <string name="preferences_history_summary">自动将条码存入历史记录</string>
    <string name="preferences_history_title">存入历史记录</string>
    <string name="preferences_invert_scan_summary">扫描黑色背景上的白色条码。仅适用于部分设备。</string>
    <string name="preferences_invert_scan_title">反色</string>
    <string name="preferences_orientation_title">不自动旋转</string>
    <string name="preferences_play_beep_title">播放提示音</string>
    <string name="preferences_remember_duplicates_summary">在历史记录中保存重复的记录</string>
    <string name="preferences_remember_duplicates_title">保存重复记录</string>
    <string name="preferences_result_title">搜索设置</string>
    <string name="preferences_scanning_title">条码类型</string>
    <string name="preferences_search_country">搜索引擎国别</string>
    <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="preferences_supplemental_title">检索更多信息</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="dialog_negative">取消</string>
    <string name="dialog_positive">确定</string>
    <string name="set_success">设置成功</string>
    <string name="set_error">设置失败</string>
    <string name="house">家庭管理</string>
    <string name="edit_house">编辑家庭</string>
    <string name="name">家庭名称</string>
    <string name="image">家庭图片</string>
    <string name="room_manage">房间管理</string>
    <string name="housename_placeHolder">请输入家庭名称</string>
    <string name="housename_edit">编辑家庭名称</string>
    <string name="choseHouseName_title">选取家庭图片</string>
    <string name="room_manage_title">房间管理</string>
    <string name="room_edit_title">编辑房间</string>
    <string name="scene">场景</string>
    <string name="add_scene">添加场景</string>
    <string name="edit_scene">编辑场景</string>
    <string name="scene_name">场景名称</string>
    <string name="scene_edit_pic">编辑图标</string>
    <string name="scene_pic">场景图标</string>
    <string name="remove_scene">删除场景</string>
    <string name="check_scene_name">请输入场景名称</string>
    <string name="check_mission_name">请添加任务</string>
    <string name="mission">任务</string>
    <string name="add_mission">添加任务</string>
    <string name="continue_add">继续添加</string>
    <string name="set_action">设置动作</string>
    <string name="execute_fail">操作失败</string>
</resources>