<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_common_header" />

    <TextView
        android:id="@+id/tv_modify_password"
        style="@style/text_large_style"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="36dp"
        android:text="@string/modify_password"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="45dp"
        android:text="@string/old_password"
        android:textColor="@color/text_large"
        android:textSize="@dimen/text_small" />

    <com.auts.lcssv.views.MyEditText
        android:id="@+id/met_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        app:has_eye="true"
        app:hint="@string/input_old_password"
        app:input_type="2"
        app:max_length="20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/new_password"
        android:textColor="@color/text_large"
        android:textSize="@dimen/text_small" />

    <com.auts.lcssv.views.MyEditText
        android:id="@+id/met_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        app:has_eye="true"
        app:hint="@string/input_new_password"
        app:input_type="2"
        app:max_length="20" />

    <TextView
        android:id="@+id/tv_save"
        style="@style/btn_common"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="67dp"
        android:text="@string/submit" />

</LinearLayout>