<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.auts.lcssv.activity.AccountRegisterActivity">

    <include layout="@layout/include_common_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            style="@style/text_large_style"
            android:layout_marginTop="30dp"
            android:text="@string/forgot_pwd_reset" />

        <TextView
            style="@style/text_small_style"
            android:layout_marginTop="40dp"
            android:text="@string/password" />

        <com.auts.lcssv.views.MyEditText
            android:id="@+id/myet_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:hint="@string/hint_login_pwd"
            app:has_eye="true"
            app:input_type="2"
            app:max_length="20" />

        <TextView
            android:id="@+id/tv_submit"
            style="@style/btn_common"
            android:layout_marginTop="45dp"
            android:text="@string/submit" />

    </LinearLayout>

</LinearLayout>
