<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:itemBar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f5f5f5">

    <include layout="@layout/include_common_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="170dp"
        android:orientation="vertical">

        <com.auts.lcssv.views.ItemBar
            android:id="@+id/ib_housename"
            android:layout_width="match_parent"
            itemBar:left_title="@string/name"
            android:layout_height="52dp" />

        <com.auts.lcssv.views.ItemBar
            android:id="@+id/ib_houseImage"
            android:layout_width="match_parent"
            itemBar:left_title="@string/image"
            itemBar:right_image="@drawable/housemanage_img"
            itemBar:right_image_background="@drawable/housemanage_cycle"
            android:layout_height="52dp" />

        <com.auts.lcssv.views.ItemBar
            android:id="@+id/ib_room_manage"
            android:layout_width="match_parent"
            itemBar:left_title="@string/room_manage"
            android:layout_height="52dp" />


    </LinearLayout>

</LinearLayout>
