<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.auts.lcssv.activity.SceneEditActivity"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_common_header" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_scene_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="26dp"
            android:text="@string/scene_name"
            android:textColor="#313131"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_scene_name"
            style="@style/base_et_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_scene_name"
            android:layout_toRightOf="@id/tv_scene_name"
            android:background="@null"
            android:focusable="true"
            android:gravity="right"
            android:paddingRight="15dp"
            android:textSize="15sp"
            tools:text="场景1"
            android:inputType="textNoSuggestions"
            android:focusableInTouchMode="true" />

        <com.auts.lcssv.views.ItemBar
            android:id="@+id/ib_scenePic"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            app:left_title="@string/scene_pic"
            app:right_image="@drawable/housemanage_img">

        </com.auts.lcssv.views.ItemBar>
    </RelativeLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/mission" />

        <com.auts.lcssv.views.ItemBar
            android:id="@+id/ib_addmission"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:left_image="@drawable/add"
            android:visibility="gone"
            app:left_message="@string/add_mission" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_mission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff" />

        <LinearLayout
            android:id="@+id/ll_add"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#ffffff"
            android:gravity="center"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_add_mission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@drawable/tianjia" />

            <TextView
                android:id="@+id/tv_add_mission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_add"
                android:textColor="#898989"
                android:textSize="15sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_del_scene"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:background="@drawable/shape_orange_border"
            android:text="@string/remove_scene"
            android:visibility="gone"
            android:textColor="@color/text_oringe"
            android:textSize="15sp" />
</LinearLayout>
    </ScrollView>