<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_smart_inserts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_add_device_vague"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.auts.lcssv.activity.AddSoftDeviceActivity"
    tools:showIn="@layout/activity_soft_ap_reset">

    <include
        android:id="@+id/title_layout"
        layout="@layout/include_common_header" />

    <TextView
        android:id="@+id/tv_reset_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:paddingLeft="55dp"
        android:paddingStart="55dp"
        android:paddingRight="55dp"
        android:gravity="center"
        android:paddingEnd="55dp"
        android:lineSpacingExtra="10dp"
        android:text="@string/reset_hint_for_smart_link"
        android:textColor="@color/text_small"
        android:textSize="@dimen/text_normal" />

    <ImageView
        android:id="@+id/iv_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="85dp"
        android:contentDescription="@string/common_image_description"
        android:src="@drawable/switch_device" />

    <TextView
        android:id="@+id/tv_next_step"
        style="@style/btn_common_hollow"
        android:layout_width="225dp"
        android:layout_marginTop="105dp"
        android:enabled="true"
        android:text="@string/next_step" />
</LinearLayout>
